--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20'>
     <tr>
-      <td><img href="C:\Users\ADI\Desktop\WEB DEVELOPER\first website\circle-cropped.png" src="C:\Users\ADI\Desktop\WEB DEVELOPER\first website\circle-cropped.png" alt="Adi's photo" width="100" height="100"> </td>
+      <td><img src="C:\Users\ADI\Desktop\WEB DEVELOPER\first website\circle-cropped.png" alt="Adi's photo" width="100" height="100"> </td>
       <td>
         <h1> Adi barkan </h1> <em> Amazon PPC manager </em> <br> Iv worked at Easy Global for one year. <br>I had learned a lot about <strong> PPC, </strong>
         and was responsible for Canada and Mexico stores.
